Check https://vuetifyjs.com/ja/components/toolbars

--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -7,13 +7,19 @@
 </head>
 <body>
 <div id="app">
-  <v-app>
-    <v-content>
-      <v-container>Hello World</v-container>
-    </v-content>
+  <v-app id="inspire">
+    <v-toolbar>
+      <v-toolbar-side-icon></v-toolbar-side-icon>
+      <v-toolbar-title>Title</v-toolbar-title>
+      <v-spacer></v-spacer>
+      <v-toolbar-items class="hidden-sm-and-down">
+        <v-btn flat>Link One</v-btn>
+        <v-btn flat>Link Two</v-btn>
+        <v-btn flat>Link Three</v-btn>
+      </v-toolbar-items>
+    </v-toolbar>
   </v-app>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
 <script>
