--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -9,36 +9,50 @@
 
 <div id="app">
   <v-app id="inspire">
-    <v-toolbar dark color="primary">
-      <v-toolbar-side-icon></v-toolbar-side-icon>
-
-      <v-toolbar-title class="white--text">Title</v-toolbar-title>
-
-      <v-spacer></v-spacer>
-
-      <v-btn icon>
-        <v-icon>search</v-icon>
-      </v-btn>
-
-      <v-btn icon>
-        <v-icon>apps</v-icon>
-      </v-btn>
-
-      <v-btn icon>
-        <v-icon>refresh</v-icon>
-      </v-btn>
-
-      <v-btn icon>
-        <v-icon>more_vert</v-icon>
-      </v-btn>
-    </v-toolbar>
+    <v-layout row wrap>
+      <v-flex
+        v-for="(bar, i) in bars"
+        :key="i"
+        xs12
+        sm12
+        md6
+        class="my-3"
+      >
+        <v-card color="gray lighten-4" flat height="200px">
+          <v-toolbar :color="bar.class" :dark="bar.dark">
+            <v-toolbar-side-icon></v-toolbar-side-icon>
+            <v-toolbar-title>Title</v-toolbar-title>
+            <v-spacer></v-spacer>
+            <v-btn icon>
+              <v-icon>search</v-icon>
+            </v-btn>
+            <v-btn icon>
+              <v-icon>favorite</v-icon>
+            </v-btn>
+            <v-btn icon>
+              <v-icon>more_vert</v-icon>
+            </v-btn>
+          </v-toolbar>
+        </v-card>
+      </v-flex>
+    </v-layout>
   </v-app>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
 <script>
-  new Vue({ el: '#app' })
+  new Vue({
+    el: '#app',
+    data: () => ({
+      bars: [
+        { 'class': '' },
+        { 'class': '', dark: true },
+        { 'class': 'primary', dark: true },
+        { 'class': 'elevation-0' }
+      ]
+    })
+  })
 </script>
 </body>
 </html>
