--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -9,32 +9,58 @@
 
 <div id="app">
   <v-app id="inspire">
-    <v-card
-      color="grey lighten-4"
-      flat
-      height="200px"
-      tile
+    <v-navigation-drawer
+      fixed
+      v-model="drawer"
+      app
     >
-      <v-toolbar dense>
-        <v-toolbar-side-icon></v-toolbar-side-icon>
+      <v-list dense>
+        <v-list-tile @click="">
+          <v-list-tile-action>
+            <v-icon>home</v-icon>
+          </v-list-tile-action>
+          <v-list-tile-content>
+            <v-list-tile-title>Home</v-list-tile-title>
+          </v-list-tile-content>
+        </v-list-tile>
 
-        <v-toolbar-title>title</v-toolbar-title>
+        <v-list-tile @click="">
+          <v-list-tile-action>
+            <v-icon>contact_mail</v-icon>
+          </v-list-tile-action>
+          <v-list-tile-content>
+            <v-list-tile-title>Contact</v-list-tile-title>
+          </v-list-tile-content>
+        </v-list-tile>
+      </v-list>
+    </v-navigation-drawer>
 
-        <v-spacer></v-spacer>
+    <v-toolbar color="indigo" dark fixed app>
+      <v-toolbar-side-icon @click.stop="drawer = !drawer"></v-toolbar-side-icon>
+      <v-toolbar-title>Application</v-toolbar-title>
+    </v-toolbar>
 
-        <v-btn icon>
-          <v-icon>search</v-icon>
-        </v-btn>
+    <v-content>
+      <v-container fluid fill-height>
+        <v-layout
+          justify-center
+          align-center
+        >
+          <v-flex text-xs-center>
+            <v-tooltip left>
+              <v-btn icon large :href="source" target="_blank" slot="activator">
+                <v-icon large>code</v-icon>
+              </v-btn>
+              <span>Source</span>
+            </v-tooltip>
+          </v-flex>
+        </v-layout>
+      </v-container>
+    </v-content>
 
-        <v-btn icon>
-          <v-icon>favorite</v-icon>
-        </v-btn>
-
-        <v-btn icon>
-          <v-icon>more_vert</v-icon>
-        </v-btn>
-      </v-toolbar>
-    </v-card>
+    <v-footer color="indigo" app inset>
+      <span class="white--text">&copy; 2018</span>
+    </v-footer>
   </v-app>
 </div>
 
@@ -43,6 +69,9 @@
 <script>
   new Vue({
     el: '#app',
+    data: () => ({
+      drawer: null
+    })
   })
 </script>
 </body>
