--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -9,41 +9,21 @@
 
 <div id="app">
   <v-app id="inspire">
-    <v-container grid-list-md text-xs-center>
-      <v-layout row wrap>
-        <v-flex xs12>
+    <v-container grid-list-xl>
+      <v-layout v-bind="binding">
+        <v-flex>
           <v-card dark color="primary">
-            <v-card-text class="px-0">12</v-card-text>
+            <v-card-text>one</v-card-text>
           </v-card>
         </v-flex>
-
-        <v-flex v-for="i in 2" :key="`6${i}`" xs6>
+        <v-flex>
           <v-card dark color="secondary">
-            <v-card-text class="px-0">6</v-card-text>
+            <v-card-text>two</v-card-text>
           </v-card>
         </v-flex>
-
-        <v-flex v-for="i in 3" :key="`4${i}`" xs4>
-          <v-card dark color="primary">
-            <v-card-text class="px-0">4</v-card-text>
-          </v-card>
-        </v-flex>
-
-        <v-flex v-for="i in 4" :key="`3${i}`" xs3>
-          <v-card dark color="secondary">
-            <v-card-text class="px-0">3</v-card-text>
-          </v-card>
-        </v-flex>
-
-        <v-flex v-for="i in 6" :key="`2${i}`" xs2>
-          <v-card dark color="primary">
-            <v-card-text class="px-0">2</v-card-text>
-          </v-card>
-        </v-flex>
-
-        <v-flex v-for="i in 12" :key="`1${i}`" xs1>
-          <v-card dark color="secondary">
-            <v-card-text class="px-0">1</v-card-text>
+        <v-flex>
+          <v-card dark color="accent">
+            <v-card-text>three</v-card-text>
           </v-card>
         </v-flex>
       </v-layout>
@@ -56,6 +36,15 @@
 <script>
   new Vue({
     el: '#app',
+    computed: {
+      binding () {
+        const binding = {}
+
+        if (this.$vuetify.breakpoint.mdAndUp) binding.column = true
+
+        return binding
+      }
+    }
   })
 </script>
 </body>
